.k8s/opensearch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: opensearch
  namespace: game-library-infra
  labels:
    app: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.19.4
          ports:
            - name: http
              containerPort: 9200
            - name: transport
              containerPort: 9300
          resources:
            limits:
              memory: 1Gi
          volumeMounts:
            - name: opensearch-data
              mountPath: /usr/share/opensearch/data
      volumes:
        - name: opensearch-data
          persistentVolumeClaim:
            claimName: opensearch-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: opensearch-service
  namespace: game-library-infra
spec:
  selector:
    app: opensearch
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: http
    - name: transport
      protocol: TCP
      port: 9300
      targetPort: transport
