.k8s/grafana.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
  namespace: game-library-infra
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:13.0.0-23336907879-ubuntu
          ports:
            - name: grafana
              containerPort: 3000
          volumeMounts:
            - name: grafana-storage-volume
              mountPath: /var/lib/grafana
          livenessProbe:
            httpGet:
              path: /api/health
              port: grafana
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: grafana
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: grafana-storage-volume
          persistentVolumeClaim:
            claimName: grafana-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: grafana-service
  namespace: game-library-infra
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      name: grafana
      port: 3000
      targetPort: grafana
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-ingress
  namespace: game-library-infra
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana._DOMAIN_
      secretName: grafana-tls
  rules:
    - host: grafana._DOMAIN_
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  name: grafana
