.k8s/prometheus.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prometheus
  namespace: game-library-infra
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v3.8.1
          args:
            - '--config.file=/etc/prometheus/prometheus.yml'
            - '--storage.tsdb.path=/prometheus'
          ports:
            - name: prometheus
              containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: prometheus
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /-/ready
              port: prometheus
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
        - name: prometheus-storage-volume
          persistentVolumeClaim:
            claimName: prometheus-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: game-library-infra
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      name: prometheus
      port: 9090
      targetPort: prometheus
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-ingress
  namespace: game-library-infra
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - metrics._DOMAIN_
      secretName: prometheus-tls
  rules:
    - host: metrics._DOMAIN_
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  name: prometheus
