.k8s/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: game-library-infra
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:3.5
          ports:
            - name: zipkin
              containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  namespace: game-library-infra
spec:
  selector:
    app: zipkin
  ports:
    - name: zipkin
      protocol: TCP  
      port: 9411
      targetPort: zipkin
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: zipkin-ingress
  namespace: game-library-infra
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - trace._DOMAIN_
      secretName: zipkin-tls
  rules:
    - host: trace._DOMAIN_
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin-service
                port:
                  number: 9411
